@@ -37,3 +37,6 @@
   - Backup: Consider setting up a remote repository on platforms like GitHub or GitLab for online backup and collaboration.
 ## Update on 2024-05-02 13:18:39
 - Finalized session updates.
+
+## Update on 2024-05-02 13:22:55
+- Finalized session updates.
